<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background"
            >

            <TextView
                android:id="@+id/judul_penggunaan"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:text=" Cara Penggunaan Aplikasi"
                android:textColor="@color/background"
                android:background="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/penggunaan_p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/satu"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                >
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="•"></TextView>
                <TextView
                    android:id="@+id/penggunaan_t1"
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/dua"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="•"></TextView>
                <TextView
                    android:id="@+id/penggunaan_t2"
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingRight="30dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/tiga"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="•"></TextView>
                <TextView
                    android:id="@+id/penggunaan_t3"
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingRight="30dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/empat"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="•"></TextView>
                <TextView
                    android:id="@+id/penggunaan_t4"
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingRight="30dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/lima"></TextView>
            </TableRow>
            </TableLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:text=" Keutamaan Surat Yasin"
                android:textColor="@color/background"
                android:background="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/keutamaan"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                >
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/pertama"></TextView>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/kedua"></TextView>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/ketiga"></TextView>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/keempat"></TextView>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/kelima"></TextView>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/keenam"></TextView>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/ketujuh"></TextView>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="•"></TextView>
                    <TextView
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/kedelapan"></TextView>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>