<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:text=" Pocket Yasin"
                android:textColor="@color/background"
                android:background="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/background">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:background="@drawable/iconapp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tentang_aplikasi"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:text=" Sumber"
                android:textColor="@color/background"
                android:background="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tentang_aplikasi_sumber"
                android:textColor="@color/black"
                android:textSize="15sp"/>
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    >
                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:text="•"></TextView>
                        <TextView
                            android:layout_column="2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:paddingRight="30dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:text="@string/tentang_aplikasi_quran"></TextView>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:text="•"></TextView>
                        <TextView
                            android:layout_column="2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:paddingRight="30dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:text="@string/tentang_aplikasi_audio"></TextView>
                    </TableRow>
                </TableLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:text="@string/kirim"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>